# real-time-data-pipelines-in-python

./: Makefile
data-warehouse/: Dockerfile  pyproject.toml
